--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@
 /build
 /captures
 .idea
+settings_REMOTE_1372.gradle
+settings_BACKUP_1372.gradle
+settings_BASE_1372.gradle
+settings_LOCAL_1372.gradle
